--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.5.1",
     "express-validator": "^7.2.0",
