--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "react-cookie-consent": "^9.0.0",
     "redlock": "^5.0.0-beta.2",
     "streamifier": "^0.1.1"
   },
