--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-chartjs-2": "^5.2.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
