--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,25 +1,23 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SnakeBee",
+  "name": "SnakeBee - Gestione Rettili",
+  "description": "App per monitorare alimentazione, eventi e salute dei tuoi rettili.",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "logo.svg",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "logo.svg",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#FAF3E0",
+  "theme_color": "#228B22",
+  "orientation": "portrait-primary",
+  "lang": "it-IT"
 }
